fix bug article shift and add project Benoit

--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -109,7 +109,14 @@ body {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
-.block-decal:nth-child(3n), .block-decal:nth-child(4n) {
+.block-decal:first-child  {
+    margin: 0;
+}
+
+.block-decal:nth-child(2)  {
+    margin: 0;
+}
+.block-decal{
     margin-top: 10%;
 }
 
